# Synap

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  readme.md
.github/workflows/: android.yml  desktop_linux.yml  web.yml
android/app/: build.gradle.kts
cli/: Cargo.toml
core/: Cargo.toml
core/src/: dto.rs  lib.rs  service.rs
core/src/crypto/: channel.rs  fingerprint.rs  mod.rs  trust.rs
core/src/db/: kvstore.rs  mod.rs  types.rs  vector.rs
coreffi/: uniffi.toml
coreffi/src/: error.rs  lib.rs  service.rs  synap.udl  types.rs
coreffi/tests/: bindings_test.rs
corenet/: Cargo.toml
corenet/src/: channel.rs  error.rs  lib.rs  runtime.rs  sync_service.rs
desktop/: Cargo.toml
desktop_linux/: Cargo.toml  function_design.md  project_design.md
desktop_linux/src/: app.rs  core.rs  domain.rs  main.rs  style.css  usecase.rs
desktop_linux/src/app/: dialog.rs  handlers.rs  message.rs  mod.rs  render.rs  state.rs  utils.rs  widgets.rs
desktop_linux/src/ui/: shell.rs
desktop_windows/: App.xaml  App.xaml.cs  ListPage.xaml  ListPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NoteCard.xaml  NoteCard.xaml.cs  NoteItem.cs  Package.appxmanifest  SettingsPage.xaml  SettingsPage.xaml.cs  TrashPage.xaml  TrashPage.xaml.cs  app.manifest  desktop_windows.csproj  desktop_windows.sln
desktop_windows/Properties/: launchSettings.json
docs/adr/: 0001-core-remains-platform-agnostic.md
relay/: Dockerfile
server/: Cargo.toml
web/: Cargo.toml  Dockerfile  README.md
web/src/: main.rs
web/style/: main.scss
xtask/: Cargo.toml
xtask/src/: main.rs
(+94 files in other folders)
