[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
camino = "1.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
uniffi_bindgen = "0.28"
uniffi_bindgen_cs = { package = "uniffi-bindgen-cs", git = "https://github.com/NordSecurity/uniffi-bindgen-cs", tag = "v0.9.0+v0.28.3" }
